spacing fixes

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,6 +1,6 @@
 .paper-lightbox {
-	margin-left: auto;
-	margin-right: 0;
+	margin-left: 6vw;
+	margin-right: auto;
 }
 
 .paper-lightbox img {
